# nexacore_erp_project

./: .gitignore  CODE_REVIEW.md  README.md  diag_db.py  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_base_tables.py  243cd5e24e69_create_base_tables.py
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  schemas.py  websocket_manager.py
backend/app/models/: __init__.py  base.py  employee.py  system_status.py  user.py
backend/app/routers/: __init__.py  employees.py  system.py
backend/tests/: conftest.py  test_employees.py
docs/: cloud_go_live_guide.md  getting_online_beginner_guide.md
nexacore_erp/: __main__.py  api_token.example.json  app.py  config.json  employee_repository.py  main.py
nexacore_erp/core/: api_employees.py  auth.py  cloud.py  database.py  events.py  models.py  permissions.py  plugins.py  tenant.py  themes.py
nexacore_erp/database/: nexacore_employeemanagement.db  nexacore_main.db
nexacore_erp/modules/account_management/: manifest.json  models.py  module.py
nexacore_erp/modules/dashboard/: __init__.py  manifest.json  module.py
nexacore_erp/modules/employee_management/: manifest.json  (+2 more)
nexacore_erp/services/: api_client.py  employees_service.py
nexacore_erp/ui/: about_dialog.py  access_helpers.py  company_settings_dialog.py  login_dialog.py  main_window.py  user_settings_dialog.py
scripts/: migrate_employees_to_backend.py  wipe_backend_employees.py
(+11 files in other folders)
